--- a/templates/AboutThem/Breeds.html
+++ b/templates/AboutThem/Breeds.html
@@ -31,13 +31,13 @@ data-bs-spy="scroll" data-bs-target="#list-org" data-bs-offset="0"
         </div>
       </div>
     </div>
-    <video preload="metadata" playsinline muted autoplay loop poster>
+    <!-- <video preload="metadata" playsinline muted autoplay loop poster>
         <source src="{{ url_for('static', filename='img/BunnyBreedssmall.webm') }}" type="video/webm">
-    </video> 
+    </video>  -->
 </div>
       <br>
-      <div class="text-center">
+      <!-- <div class="text-center">
         <a class="author" href="https://www.vecteezy.com/video/22658859-group-of-healthy-lovely-rabbits-eating-food-on-nature-background"  target="_blank">Group of healthy lovely   rabbits eating food on nature background. Stock Videos by Vecteezy</a>
-    </div>
+    </div> -->
     <br>
 {% endblock %}
