--- a/templates/AboutThem/FoodandNutrition.html
+++ b/templates/AboutThem/FoodandNutrition.html
@@ -87,14 +87,14 @@ data-bs-spy="scroll" data-bs-target="#list-org" data-bs-offset="0"
         </div>
     </div>
 
-    <video playsinline muted autoplay loop poster>
+    <!-- <video playsinline muted autoplay loop poster>
         <source src="{{ url_for('static', filename='img/BunnyEating.mp4') }}" type="video/mp4">
-    </video>
+    </video> -->
 </div>
 <br>
-<div class="text-center">
+<!-- <div class="text-center">
     <a class="author" href="https://www.vecteezy.com/video/26439205-black-and-white-bunny-eating-grass-in-the-garden"
         target="_blank">Black and white bunny eating grass in the garden Stock Videos by Vecteezy</a>
-</div>
+</div> -->
 <br>
 {% endblock %}
