--- a/templates/AboutThem/HealthandCare.html
+++ b/templates/AboutThem/HealthandCare.html
@@ -79,9 +79,9 @@ data-bs-spy="scroll" data-bs-target="#list-org" data-bs-offset="0"
             </div>
         </div>
     </div>
-    <video playsinline muted autoplay loop poster>
+    <!-- <video playsinline muted autoplay loop poster>
         <source src="{{ url_for('static', filename='img/BunnyHealth.mp4') }}" type="video/mp4">
-    </video>
+    </video> -->
 </div>
 <br>
 <div class="content" id="ContainerFandN">
@@ -152,9 +152,9 @@ data-bs-spy="scroll" data-bs-target="#list-org" data-bs-offset="0"
             </div>
         </div>
     </div>
-    <video playsinline muted autoplay loop poster>
+    <!-- <video playsinline muted autoplay loop poster>
         <source src="{{ url_for('static', filename='img/BunnyHealth2.mp4') }}" type="video/mp4">
-    </video>
+    </video> -->
 </div>
 <br>
 <div class="container text-center fadeIn">
@@ -204,7 +204,7 @@ data-bs-spy="scroll" data-bs-target="#list-org" data-bs-offset="0"
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 <br>
-<div class="text-center">
+<!-- <div class="text-center">
     <a class="author"
         href="https://www.vecteezy.com/video/13468503-young-boy-caucasian-ethnicity-in-a-blue-checkered-shirt-holds-cute-fluffy-domestic-white-bunny-his-arms-slowly-strokes-it-outdoors-in-sunny-weathe-easter-bunny-for-spring-religious-holiday-easter"
         target="_blank">
@@ -212,6 +212,6 @@ data-bs-spy="scroll" data-bs-target="#list-org" data-bs-offset="0"
     <a class="author" target="_blank"
         href="https://www.vecteezy.com/video/13468498-young-boy-caucasian-ethnicity-in-a-blue-checkered-shirt-holds-cute-fluffy-domestic-white-bunny-his-arms-slowly-strokes-it-outdoors-in-sunny-weathe-easter-bunny-for-spring-religious-holiday-easter">Videos
         by Vecteezy</a>
-</div>
+</div> -->
 <br>
 {% endblock %}
