--- a/templates/AboutThem/ItemsandToys.html
+++ b/templates/AboutThem/ItemsandToys.html
@@ -32,13 +32,13 @@ data-bs-spy="scroll" data-bs-target="#list-org" data-bs-offset="0"
         </div>
       </div>
     </div>
-    <video preload="metadata" playsinline muted autoplay loop poster>
+    <!-- <video preload="metadata" playsinline muted autoplay loop poster>
         <source src="{{ url_for('static', filename='img/BunnyPlayingsmall.webm') }}" type="video/webm">
-    </video> 
+    </video>  -->
 </div>
-      <br>
+      <!-- <br>
       <div class="text-center">
         <a class="author" href="https://pixabay.com/users/tolmachev_alexander-18086370/?utm_source=link-attribution&utm_medium=referral&utm_campaign=video&utm_content=87354"  target="_blank">Video by Alexander Tolmachev from Pixabay</a>
-    </div>
+    </div> -->
     <br>
 {% endblock %}
